@@ -39,6 +39,7 @@ to the [](jvm-config):
 
 ```none
 --add-opens=java.base/java.nio=ALL-UNNAMED
+--sun-misc-unsafe-memory-access=allow
 ```
 
 ### Multiple Snowflake databases or accounts
